assert(q > prev_q) failed: we should be moving forward through memory

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b116
    • Not verified

      JDK9 b51 PIT, MacOS, G1
      nsk/sysdict/vm/stress/btree/btree012


      # Internal Error (/opt/jprt/T/P1/165907.amurillo/s/hotspot/src/share/vm/memory/space.inline.hpp:249), pid=52218, tid=22019
      # assert(q > prev_q) failed: we should be moving forward through memory
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20150216165907.amurillo.jdk9-hs-2015-02--b00)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20150216165907.amurillo.jdk9-hs-2015-02--b00 mixed mode bsd-amd64 compressed oops)
      # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- T H R E A D ---------------

      Current thread (0x00007fc7c212a800): VMThread [stack: 0x000000021aab6000,0x000000021abb6000] [id=22019]

      Stack: [0x000000021aab6000,0x000000021abb6000], sp=0x000000021abb4f40, free space=1019k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x8dd557] VMError::report_and_die()+0x417
      V [libjvm.dylib+0x316a22] report_vm_error(char const*, int, char const*, char const*)+0x63
      V [libjvm.dylib+0x7ef3dd] void CompactibleSpace::scan_and_adjust_pointers<CompactibleSpace>(CompactibleSpace*)+0x2b5
      V [libjvm.dylib+0x3c847e] G1AdjustPointersClosure::doHeapRegion(HeapRegion*)+0x80
      V [libjvm.dylib+0x424d8c] HeapRegionManager::iterate(HeapRegionClosure*) const+0xba
      V [libjvm.dylib+0x3c8049] G1MarkSweep::mark_sweep_phase3()+0x14d
      V [libjvm.dylib+0x3c7ae1] G1MarkSweep::invoke_at_safepoint(ReferenceProcessor*, bool)+0x18f
      V [libjvm.dylib+0x3aeeeb] G1CollectedHeap::do_collection(bool, bool, unsigned long)+0x6ab
      V [libjvm.dylib+0x3b0a1a] G1CollectedHeap::satisfy_failed_allocation(unsigned long, unsigned char, bool*)+0x202
      V [libjvm.dylib+0x902ada] VM_G1CollectForAllocation::doit()+0x3e
      V [libjvm.dylib+0x9025ae] VM_Operation::evaluate()+0x4a
      V [libjvm.dylib+0x8ffe87] VMThread::evaluate_operation(VM_Operation*)+0xdb
      V [libjvm.dylib+0x9003e9] VMThread::loop()+0x3f7
      V [libjvm.dylib+0x8ff6ce] VMThread::run()+0xcc
      V [libjvm.dylib+0x72e70d] java_start(Thread*)+0x105
      C [libsystem_c.dylib+0x14772] _pthread_start+0x147
      C [libsystem_c.dylib+0x11a1] thread_start+0xd

      VM_Operation (0x000000021bfb7e20): G1CollectForAllocation, mode: safepoint, requested by thread 0x00007fc7c283e000

            Assignee:
            Bengt Rutisson (Inactive)
            Reporter:
            Dmitry Fazunenko (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: