8073321: assert(q > prev_q) failed: we should be moving forward through memory

Reviewed-by: jmasa, mgerdin